--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bs58check": "^3.0.1",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-js-stickynav": "^1.0.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-sticky": "^6.0.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "@types/bs58": "^4.0.4",
+    "@types/crypto-js": "^4.2.2",
     "source-map-loader": "^5.0.0"
   }
 }
